--- a/style.css
+++ b/style.css
@@ -972,7 +972,7 @@ nav .fa-solid{
         padding-bottom: 0.25em;
         padding-inline: 0.3em;
         width: auto;
-        color: #b7c5d3;
+        color: #82FFD8;
         line-height: 1.25;
         font-size: 24px;
         font-weight: 500;
