--- a/style.css
+++ b/style.css
@@ -213,6 +213,7 @@ nav .fa-solid{
 }
 .about-text p4{
     font-size: 24px;
+    font-weight: 500;
     inline-size: 40em;
     line-height: 1.5;
     color: #B7C5D3;
@@ -310,7 +311,7 @@ nav .fa-solid{
     color: #b7c5d3;
     border: 2px solid #2F4858;
     border-left: 2px solid #82FFD8;
-    border-radius: 2px;
+    border-radius: 5px;
     padding: 5px 10px;
     font-size: 18px;
     cursor: pointer;
