--- a/style.css
+++ b/style.css
@@ -307,6 +307,11 @@ nav .fa-solid{
     color: #82FFD8;
 }
 
+.selected {
+    background: #2F4858;
+    border-left: 2px solid #82FFD8 !important;
+}
+
 .exp-box{
     position: relative;
     top: 10vh;
@@ -315,7 +320,7 @@ nav .fa-solid{
 .companies a{
     text-decoration: none;
     font-size: 12px;
-    color: #b7c5d3;
+    color: inherit;
     border: 2px solid #2F4858;
     border-radius: 5px;
     padding: 5px 10px;
